# CMIMC2024

./: README.md
Blotto Swarm (AI)/: Blotto Swarm.docx  NNtrainer.py  grader.py  grader_global.py  strategy.py
Death Run (AI)/death_run/: criminal.py  game.py  graph.py  student.py
Don_t Connect 5 (AI)/: Don_t Connect 5.docx  NNtrainer-DC5-policy.py  NNtrainer-DC5-value.py  hex_func.py  hex_grader.py  hex_match.py  hex_visualizer.py  instructions.docx
Don_t Connect 5 (AI)/CPP_POLICY_TRAINER/: CMakeLists.txt  datagen.cpp  datagen.h  main.cpp  mcts.cpp  mcts.h  policy_trainer.cpp  policy_trainer.h  util.cpp  util.h
Don_t Connect 5 (AI)/bot/: greedy_bot_move.py  mcts2_bot_move.py  mcts_bot_move.py  simple_bot_move.py  strategy.py  strategy_dev.py  strategy_dev3.py  strategy_dev_policy.py  strategy_nn.py
Don_t Connect 5 (AI)/games/: converter.py
Don_t Connect 5 (AI)/unused_bot/: mcts_bot_move.py  random_bot_move.py  simple_bot_move.py
Dungeon Journey (New Language)/: dungeon 3.1-3.txt  dungeon 3.1-5.txt  dungeon 3.1-6.txt  dungeon.txt
Dungeon Journey (New Language)/Dungeon Journey starter code/: codedump.txt  codedump2.txt  dungeon.npy
Dungeon Journey (New Language)/solutions/: bonus1.txt  bonus2.txt  dungeon 1.txt  dungeon 10.txt  dungeon 2-test.txt  dungeon 3-test.txt  dungeon 3.txt  dungeon 4-test.txt  dungeon 4.txt  dungeon 5-test.txt  dungeon 5.txt  dungeon 6.txt  dungeon 7.txt  dungeon 8.txt  dungeon 9 archive.txt  dungeon 9.txt
The Road Not Bombed (Optimization)/: The Road not Bombed.docx  grader.py  strategy.py  thomas.py
(+1 files in other folders)
